--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -58,7 +58,7 @@
                                 <strong>Descrição:</strong>
                                 <p>Projeto feito a partir da aulas da Rocketseat na semana ominiStek, para as tecnologias NodeJs, React e React Native </p>
                                 <strong>tecnologias</strong>
-                                <p>NodeJS React</p>
+                                <p>NodeJS, React, MongoDB</p>
                                 <button> <a href="https://github.com/juliobissoli/ominiSteck_19"> Acessar <i class="fab fa-github"></i></a></button>
                             </div>
                     </div>
@@ -141,7 +141,13 @@
                    
             </div>
 
+           
         </div>
+        <div class="subtitulo">
+                <h2>Contato:</h2>
+                <p>juliobissoli33@gmail.com</p>
+                <p>https://github.com/juliobissol</p>
+            </div>
 
     </body>
 
