--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -1,6 +1,7 @@
 <html>
     <header>
         <title>Portifolio Julio</title>
+        <meta UTF-8>
         <link href="css/principal.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
         <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
